# leidenalg

./: CMakeLists.txt
cmake/: FindIGRAPH.cmake
